--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Happy New Year</title>
+	<title>Сongratulation</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js" defer></script>
 	<script src="js/main.js" defer></script>
@@ -13,6 +13,10 @@
 		.invisible {
 			opacity: 0;
 		}
+		.preloader{
+			
+		}
+		.visible-mobile .preloader{transform: rotate(90deg);display: none;}
 		.content{ 
 			opacity: 0;
 		}
@@ -32,11 +36,11 @@
 				<div class="box">
 					<div class="title">
 						<span class="block"></span>
-						<h1>Sadovod Company<span></span></h1>
+						<h1>Чел ты...<span></span></h1>
 					</div>
 					<div class="role">
 						<div class="block"></div>
-						<p>Presents special for you</p>
+						<p>Это для тебя</p>
 					</div>
 				</div>
 			</div>
@@ -924,7 +928,7 @@
 			</div>
 		</section>
 		<section class="content">
-			<h2 class="content__heading">Happy New Year</h2>
+			<h2 class="content__heading">Have a nice holiday and rest</h2>
 			<div class="content__gallery">
 				<div class="content__gallery-item"><img src="img/1.jpg" alt="Alt"></div>
 				<div class="content__gallery-item"><img src="img/2.jpg" alt="Alt"></div>
@@ -946,65 +950,25 @@
 				<div class="content__gallery-item"><img src="img/18.jpg" alt="Alt"></div>
 				<div class="content__gallery-item"><img src="img/19.jpg" alt="Alt"></div>
 				<div class="content__gallery-item"><img src="img/20.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/1.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/2.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/3.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/4.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/5.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/6.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/7.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/8.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/9.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/10.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/11.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/12.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/13.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/14.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/15.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/16.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/17.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/18.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/19.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/20.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/1.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/2.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/3.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/4.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/5.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/6.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/7.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/8.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/9.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/10.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/11.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/12.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/13.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/14.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/15.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/16.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/17.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/18.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/19.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/20.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/1.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/2.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/3.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/4.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/5.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/6.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/7.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/8.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/9.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/10.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/11.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/12.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/13.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/14.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/15.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/16.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/17.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/18.jpg" alt="Alt"></div>
-				<div class="content__gallery-item"><img src="img/19.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/21.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/22.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/23.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/24.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/25.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/26.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/27.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/28.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/29.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/30.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/31.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/32.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/33.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/34.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/35.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/36.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/37.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/38.jpg" alt="Alt"></div>
+				<div class="content__gallery-item"><img src="img/39.jpg" alt="Alt"></div>
 				<div class="content__gallery-item"><img src="img/20.jpg" alt="Alt"></div>
 			</div>
 		</section>
