--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 			opacity: 0;
 		}
 		.preloader{
-			
+			transform: rotate(90deg);
 		}
-		.visible-mobile .preloader{transform: rotate(90deg);display: none;}
+		.visible-mobile .preloader{display: none;}
 		.content{ 
 			opacity: 0;
 		}
