--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		.invisible {
 			opacity: 0;
 		}
-		.preloader{
+		.preloader-mobile{
 			transform: rotate(90deg);
+			align-items: center;
 		}
-		.visible-mobile .preloader{display: none;}
 		.content{ 
 			opacity: 0;
 		}
@@ -25,9 +25,7 @@
 		}
 		.visible .content{
 			opacity: 1;
-		}
-		.visible-mobile .content{
-			opacity: 1;
+			transform: rotate(0deg);
 		}
 	</style>
 </head>
